frontend/test/should_fail/container_copy_constructor_006.grg
test t
{
	if {
		map<Node,Edge>(map<double,Node>{}).empty();
	}
}
